Fix left alignment to match content below

--- a/src/components/MainMenu.module.scss
+++ b/src/components/MainMenu.module.scss
@@ -9,13 +9,6 @@
 .container {
   max-width: 1280px;
   margin: 0 auto;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 64px;
   padding: 0 16px;
 
   @media (min-width: 640px) {
@@ -25,6 +18,13 @@
   @media (min-width: 1024px) {
     padding: 0 32px;
   }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 64px;
 }
 
 // Remove brand section since title is not needed
@@ -40,9 +40,7 @@
   display: none;
   align-items: center;
   gap: 4px;
-  width: 100%;
-  margin-left:-55px;
-  justify-content: flex-start; // Align items to the left
+  justify-content: flex-start;
 
   @media (min-width: 768px) {
     display: flex;
@@ -93,6 +91,7 @@
 
 .mobileMenuButton {
   display: block;
+  margin-left: auto;
 
   @media (min-width: 768px) {
     display: none;
